--- a/Assignment Folder/CSS/Menu.css
+++ b/Assignment Folder/CSS/Menu.css
@@ -97,6 +97,20 @@
     visibility: visible;   
 }
 
+#RightSide{
+    background-color: #202020; 
+    height: 16500px;
+    width: 20%;
+    float: right;
+}
+
+#LeftSide{
+    background-color: #202020;  
+    height: 16500px;
+    width: 20%;
+    float: left;
+    color: #ffffff;
+}
 a{
     color: #ffffff;
 }
@@ -105,9 +119,37 @@ a:hover{
     color: #ffffff;
 }
 
-#Product{
-    margin: 5px 0;
+#LeftSide h4{
     text-align: center;
+    color: #ffffff;
+    margin: 30px 0
+}
+
+#JuventusLink img, #BayernMunichLink img, #PSGLink img, #ManCityLink img, #RealMadridLink img{
+    width: 50px;
+    height: 50px;
+    background-color: #ffffff;
+    margin: 25px 10px;
+}
+
+#ProductInfo{
+    text-align: center;
+}
+
+
+#TeamTitle{
+    font-size: 30px;
+    text-align: center;
+    margin-top: 15px;
+}
+
+#Catalogue{
+    width: 60%;
+    display: inline-block;
+}
+
+#HomeDiv{
+    width: 100%;
 }
 
 #Image{
@@ -115,4 +157,19 @@ a:hover{
     margin: 0 25px;
     border: 1px solid;
     float: left;
+}
+.clear{
+    clear: left;
+}
+
+#Jersey, #Shorts, #Socks{
+    margin: 15px 0;
+}
+
+#HomeTitle, #AwayTitle, #ThirdTitle{
+    margin-left: 25px;
+}
+
+select{
+    margin: 25px 0;
 }
