--- a/Assignment Folder/CSS/MyCart.css
+++ b/Assignment Folder/CSS/MyCart.css
@@ -97,20 +97,6 @@
     visibility: visible;   
 }
 
-#RightSide{
-    background-color: #202020; 
-    height: 16000px;
-    width: 20%;
-    float: right;
-}
-
-#LeftSide{
-    background-color: #202020;  
-    height: 16000px;
-    width: 20%;
-    float: left;
-    color: #ffffff;
-}
 a{
     color: #ffffff;
 }
@@ -119,53 +105,32 @@ a:hover{
     color: #ffffff;
 }
 
-#LeftSide h4{
+#Product{
+    margin: 5px 0;
     text-align: center;
-    color: #ffffff;
-    margin: 30px 0
-}
-
-#JuventusLink img, #BayernMunichLink img, #PSGLink img, #ManCityLink img, #RealMadridLink img{
-    width: 50px;
-    height: 50px;
-    background-color: #ffffff;
-    margin: 25px 10px;
-}
-
-#ProductInfo{
-    text-align: center;
-}
-
-
-#TeamTitle{
-    font-size: 30px;
-    text-align: center;
-    margin-top: 15px;
-}
-
-#Catalogue{
-    width: 60%;
-    display: inline-block;
-}
-
-#HomeDiv{
-    width: 100%;
 }
 
 #Image{
     width: 25%;
-    margin: 0 25px;
+    margin: 25px 25px;
     border: 1px solid;
     float: left;
 }
+
+.table{
+    width: 72%;
+}
+
+#table{
+    margin: 200px 0 0 0;
+}
+
+h1{
+    margin: 20px;
+    text-align: center;
+}
+
+
 .clear{
     clear: left;
-}
-
-#Jersey, #Shorts, #Socks{
-    margin: 15px 0;
-}
-
-#HomeTitle, #AwayTitle, #ThirdTitle{
-    margin-left: 25px;
 }
