- Arranged the ERD of the Datbase to its recent structure - Made and Added the logo that will be used for the project - Arranged the HTML structure of the Forgot Password and Help pages - Arranged the style of the Forgot Password and Help pages - Added the logo in the navigation bar - Added the Fade In/Out animations for the Login and Register and Forgot Password Pages

--- a/Assignment Folder/CSS/Menu.css
+++ b/Assignment Folder/CSS/Menu.css
@@ -8,7 +8,9 @@
 
 
 #MainLogo{
-    margin-left: 200px;
+    margin-left: 100px;
+    width: 250px;
+    height: 125px;
 }
 
 .ContactPhoneButton, .FeedbackButton, .MyCartButton, .HelpButton, .LogOutButton, .ImagesButton, .ProductsButton{
