--- a/Assignment Folder/CSS/FirstPage.css
+++ b/Assignment Folder/CSS/FirstPage.css
@@ -46,17 +46,20 @@ body, html{
     width: 1px;
     left: 51%;
     top: 355px;
+    color: #ffffff;
 }
 #OrWord{
     position: absolute;
     left: 50.5%;
     top: 550px;
+    color: #ffffff;
 }
 #BottomLines{
     position: absolute;
     left: 51%;
     width: 0;
     top: 575px;
+    color: #ffffff;
 }
 
 #RegisterDiv{
@@ -95,3 +98,18 @@ body, html{
 input[type = "text"], input[type = "password"]{
     font-family: inherit;
 }
+
+#RegisterDiv, #LoginDiv{
+    opacity: 0.5;
+    transition: opacity 1s ease-in-out;
+    -moz-transition: opacity 1s ease-in-out;
+    -webkit-transition: opacity 1s ease-in-out;
+}
+
+#RegisterDiv:hover, #LoginDiv:hover{
+    opacity: 1.0;
+    transition: opacity .55s ease-in-out;
+    -moz-transition: opacity .55s ease-in-out;
+    -webkit-transition: opacity .55s ease-in-out;
+}
+
