--- a/Assignment Folder/CSS/ForgotPassword.css
+++ b/Assignment Folder/CSS/ForgotPassword.css
@@ -14,4 +14,33 @@ body, html{
 
 #FrgtPassForm{
     position: absolute;
+    width: 35%;
+    left: 33%;
+    right: 50%;
+    top: 235px;
+    opacity: 0.5;
+    transition: opacity 1s ease-in-out;
+    -moz-transition: opacity 1s ease-in-out;
+    -webkit-transition: opacity 1s ease-in-out;
+    text-align: center;
+}
+
+#FrgtPassForm:hover{
+    opacity: 1.0;
+    transition: opacity .55s ease-in-out;
+    -moz-transition: opacity .55s ease-in-out;
+    -webkit-transition: opacity .55s ease-in-out;
+}
+
+label{
+    color: #ffffff;
+}
+
+*{
+    font-size: 20px;
+}
+
+h1{
+    margin: 0 0 35px 0;
+    color: #ffffff;
 }
