--- a/Assignment Folder/CSS/searchbar.css
+++ b/Assignment Folder/CSS/searchbar.css
@@ -8,7 +8,7 @@ a, a:hover, a:visited, a:link{
 
 #Image{
     width: 300px;
-    margin: 15px;25px;
+    margin: 15px 25px;
     border: 1px solid;
     float: left;
 }
