--- a/Assignment Folder/CSS/CheckoutPage.css
+++ b/Assignment Folder/CSS/CheckoutPage.css
@@ -1,17 +1,3 @@
-#BackgroundImage{
-    height: 100%;
-    width: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-body, html{
-    margin:0;
-    height: 100%;
-    overflow: hidden;
-}
-
 #LoggedInUsername a{
     color:  #ffffff;
 }
@@ -109,21 +95,60 @@ body, html{
     visibility: visible;   
 }
 
-#ContactUsForm{
-    position: absolute;
-    top: 350px;
-    left: 5%;
+#Image{
+    width: 25%;
+    margin: 25px 15px 15px 15px;
+    border: 1px solid;
+    float: left;
+}
+
+#RightSide{
+    background-color: #202020; 
+    height: 515px;
+    width: 20%;
+    float: right;
+}
+
+#LeftSide{
+    background-color: #202020;  
+    height: 515px;
+    width: 20%;
+    float: left;
+}
+
+#MainContent{
+    width: 100%;
+}
+
+#ProductDivs{
+    width: 60%;
+    display: inline-block;
+}
+
+#ProductDivs #ProductTextInfo{
+    margin-top: 100px;
+}
+
+#ProductTextInfo{
+    margin-top: 75px;
     text-align: center;
-    color: #ffffff;
 }
 
-a:link, a:hover{
-    color: #ffffff;
+.clear{
+    clear: left;
 }
 
-.alert{
-    width: 400px;
-    position: absolute;
-    top: 900px;
-    left: 5%;
+#ProductsSeparator{
+    width: 100%;
+    height: 20px;
+    background-color: #202020;
+}
+
+#PaymentImages{
+    width: 50px;
+    height: 50px;
+}
+
+#FinalStepInformation{
+    text-align: center;
 }
