--- a/Assignment Folder/CSS/WebsiteFeedback.css
+++ b/Assignment Folder/CSS/WebsiteFeedback.css
@@ -1,17 +1,3 @@
-#BackgroundImage{
-    height: 100%;
-    width: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-body, html{
-    margin:0;
-    height: 100%;
-    overflow: hidden;
-}
-
 #LoggedInUsername a{
     color:  #ffffff;
 }
@@ -109,21 +95,38 @@ body, html{
     visibility: visible;   
 }
 
-#ContactUsForm{
-    position: absolute;
-    top: 350px;
-    left: 5%;
+#LeftSide{
+    background-color: #202020;  
+    height: 100px;
+    width: 20%;
+    float: left;
+}
+
+#RightSide{
+    background-color: #202020;  
+    height: 100px;
+    width: 20%;
+    float: right;
+}
+
+#Reviews{
+    width: 60%;
+    display: inline-block;
+}
+
+#ActualReviews{
     text-align: center;
-    color: #ffffff;
+    
 }
 
-a:link, a:hover{
-    color: #ffffff;
+#MainContent{
+    width: 100%;
 }
 
-.alert{
-    width: 400px;
-    position: absolute;
-    top: 900px;
-    left: 5%;
+.clear{
+    clear: left;
+}
+
+#LeftSide p, #RightSide p{
+    color: #ffffff;
 }
