- Made the final touches on the pages - Created the scripts that will handle the notification

--- a/Assignment Folder/CSS/CheckoutPage.css
+++ b/Assignment Folder/CSS/CheckoutPage.css
@@ -152,3 +152,11 @@
 #FinalStepInformation{
     text-align: center;
 }
+
+.alert{
+    position: absolute;
+    top: 425px;
+    left: 20%;
+    right: 20%;
+    text-align: center;
+}
