--- a/Assignment Folder/CSS/searchbar.css
+++ b/Assignment Folder/CSS/searchbar.css
@@ -1,9 +1,109 @@
+#LoggedInUsername a{
+    color:  #ffffff;
+}
+
+#MainContent{
+    width: 100%
+}
+#MainLogo{
+    margin-left: 100px;
+    width: 250px;
+    height: 125px;
+}
+
+.ContactPhoneButton, .FeedbackButton, .MyCartButton, .HelpButton, .LogOutButton, .ImagesButton, .ProductsButton{
+    position: relative;
+    display: inline-block;
+}
+
+.ProductsButton{
+    left: 75px;
+}
+
+.HelpButton{
+    left: 150px;
+}
+
+.ContactPhoneButton{
+    left: 225px;
+}
+
+.FeedbackButton{
+    left: 300px;
+}
+
+.ImagesButton{
+    left: 375px;
+}
+
+.MyCartButton{
+    left: 450px;
+}
+
+.LogOutButton{
+    left: 525px;
+}
+
+.ContactPhoneText, .LogOutText, .ImagesText, .ProductsText{
+    visibility: hidden;
+    width: 120px;
+    background-color: #ffffff;
+    text-align: center;
+    padding: 5px;
+    border-radius: 6px;
+    position: absolute;
+    bottom: 100%;
+    left: -50%;
+}
+
+.FeedbackText, .HelpText, .MyCartText{
+    visibility: hidden;
+    width: 120px;
+    background-color: #ffffff;
+    text-align: center;
+    padding: 5px;
+    border-radius: 6px;
+    position: absolute;
+    top: 100%;
+    left: -50%;
+}
+
+.ContactPhoneText::after, .ImagesText::after, .LogOutText::after, .ProductsText::after{
+    content: " ";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #ffffff transparent  transparent transparent;
+}
+
+.FeedbackText::after, .HelpText::after, .MyCartText::after{
+    content: " ";
+    position: absolute;
+    bottom: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent transparent #ffffff transparent;
+}
+
+.ContactPhoneButton:hover .ContactPhoneText, .FeedbackButton:hover .FeedbackText, .MyCartButton:hover .MyCartText, .HelpButton:hover .HelpText,
+.LogOutButton:hover .LogOutText,
+.ImagesButton:hover .ImagesText,
+.ProductsButton:hover .ProductsText{
+    visibility: visible;   
+}
+
 a, a:hover, a:visited, a:link{
     color: #000000;
 }
 
 #Product{
-    display: inline;
+    display: inline-block;
+    margin: 5px 5px 5px 20px;
 }
 
 #Image{
@@ -20,4 +120,18 @@ a, a:hover, a:visited, a:link{
 #ProductInfo{
     margin-left: 500px;
     padding-top: 50px;
+}
+
+#RightSide{
+    background-color: #202020; 
+    height: 500px;
+    width: 20%;
+    float: right;
+}
+
+#LeftSide{
+    background-color: #202020; 
+    height: 500px;
+    width: 20%;
+    float: left;
 }
